--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 dash>=2
-dash-bootstrap-components<1
+dash-bootstrap-components>=1
 dash-auth
-explainerdashboard
+explainerdashboard==0.4.3
 gunicorn==20.1.0
 jupyter_dash
-dtreeviz>=1.1.4
 numpy
 pandas>=1.4.0
 scikit-learn
